--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:watch": "npm test -- --watch",
     "test:coverage": "npm test -- --coverage",
     "lint": "eslint . --ext .js --ignore-path .gitignore",
-    "lint:fix": "eslint . --ext .js --ignore-path .gitignore --fix"
+    "lint:fix": "eslint . --ext .js --ignore-path .gitignore --fix",
+    "migrate:up": "npx sequelize-cli db:migrate",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo"
   },
   "repository": {
     "type": "git",
@@ -25,7 +27,6 @@
   "homepage": "https://github.com/betagouv/msj-public-back#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
     "cls-hooked": "^4.2.2",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
