--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm ci
 
       - name: build the app
-      - run: npm run build --if-present
+        run: npm run build --if-present
 
       - name: Lint
         run: npm run lint
