fetch appointements from current rails backend

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ LM_PATH=
 LM_ACCOUNT=
 LM_PWD=
 SMS_SENDER=
+
+FRONT_DOMAIN=http://localhost:5000
+FRONT_INVITATION_URL=http://localhost:5000/accept_invitation
+AGENTS_APP_DOMAIN=http://localhost:3001
+AGENTS_APP_BASIC_AUTH_USERNAME=MonSuiviJusticePPSMJ
+AGENTS_APP_BASIC_AUTH_PASSWORD='Cm&F(o5X!cX{]@gusih~FAhnCU0U-'
