--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ LM_ACCOUNT=
 LM_PWD=
 SMS_SENDER=
 
-FRONT_DOMAIN=http://localhost:5000
-FRONT_INVITATION_URL=http://localhost:5000/accept_invitation
-AGENTS_APP_DOMAIN=http://localhost:3001
-AGENTS_APP_BASIC_AUTH_USERNAME=MonSuiviJusticePPSMJ
-AGENTS_APP_BASIC_AUTH_PASSWORD='Cm&F(o5X!cX{]@gusih~FAhnCU0U-'
+FRONT_DOMAIN=
+FRONT_INVITATION_URL=
+AGENTS_APP_DOMAIN=
+AGENTS_APP_BASIC_AUTH_USERNAME=
+AGENTS_APP_BASIC_AUTH_PASSWORD=
