--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Backend de l'application publique Mon Suivi Justice",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node ./dist/application.js",
+    "build-dist": "./node_modules/typescript/bin/tsc",
+    "dev": "ts-node-dev src/app.ts",
     "debug": "npm run dev -- --inspect",
     "test": "jest --runInBand",
     "test:watch": "npm test -- --watch",
     "test:coverage": "npm test -- --coverage",
-    "lint": "eslint . --ext .js --ignore-path .gitignore",
-    "lint:fix": "eslint . --ext .js --ignore-path .gitignore --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint .",
     "migrate:up": "npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo"
   },
@@ -38,16 +39,27 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.4",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "source-map-support": "^0.5.21",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.11.7",
+    "@types/sequelize": "^4.28.14",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
     "jest": "^29.0.1",
     "nodemon": "^2.0.19",
+    "prettier": "2.7.1",
     "supertest": "^6.2.4"
   }
 }
