--- a/package.json
+++ b/package.json
@@ -38,17 +38,21 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.4",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.25.3",
     "sequelize-cli": "^6.4.1",
+    "sequelize-typescript": "^2.1.5",
     "source-map-support": "^0.5.21",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.7",
     "@types/sequelize": "^4.28.14",
+    "@types/validator": "^13.7.9",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.23.0",
