--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Backend de l'application publique Mon Suivi Justice",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/application.js",
-    "build-dist": "./node_modules/typescript/bin/tsc",
-    "dev": "ts-node-dev src/app.ts",
+    "start": "node ./dist/server.js",
+    "build-dist": "./node_modules/typescript/bin/tsc --project ./tsconfig.production.json",
+    "dev": "ts-node-dev src/server.ts",
     "debug": "npm run dev -- --inspect",
     "test": "jest --runInBand",
     "test:watch": "npm test -- --watch",
@@ -43,6 +43,7 @@
     "sequelize-cli": "^6.4.1",
     "sequelize-typescript": "^2.1.5",
     "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
