--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/server.js",
-    "build-dist": "./node_modules/typescript/bin/tsc --project ./tsconfig.production.json",
+    "build": "tsc --project ./tsconfig.production.json",
     "dev": "ts-node-dev src/server.ts",
     "debug": "npm run dev -- --inspect",
     "test": "jest --runInBand",
