--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
   "editor.formatOnType": false, // required
   "editor.formatOnSave": true, // optional 
   "editor.formatOnSaveMode": "file", // required to format on save
-  "files.autoSave": "onFocusChange" // optional but recommended
+  "files.autoSave": "onFocusChange",
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#412533",
+    "titleBar.activeBackground": "#5C3448",
+    "titleBar.activeForeground": "#FCF9FB"
+  } // optional but recommended
 }
