--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cls-hooked": "^4.2.2",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
